# postgrest-fastapi

./: README.md  docker-compose.yaml
backend/: local.dockerfile  pyproject.toml  sqitch.conf
backend/scripts/: run_backend_local.sh
backend/src/: app.py
backend/src/db/: extensions.sql  global.sql  roles.sql
backend/src/db/api/: schema.sql  users.sql
backend/src/db/api/rpc/: current_user.sql  login.sql  logout.sql  refresh_session.sql  register.sql
backend/src/db/app/: schema.sql  users.sql
backend/src/db/auth/: current_user_id.sql  login.sql  logout.sql  pre_request.sql  refresh_session.sql  schema.sql  sessions.sql
backend/src/db/helpers/: info_all.sql  info_owners.sql  info_udfs.sql  schema.sql
backend/src/db/migrations/: sqitch.plan
backend/src/db/migrations/deploy/: 0001_initial.sql
backend/src/db/migrations/revert/: 0001_initial.sql
backend/src/db/migrations/verify/: 0001_initial.sql
backend/tests/: test_backend.py
